@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Aug 2011; Michael Weber <xmw@gentoo.org> ncdc-0.5.ebuild:
+  remove eautoreconf from release ebuild
+
 *ncdc-0.5 (03 Aug 2011)
 
   03 Aug 2011; Michael Weber <xmw@gentoo.org> +ncdc-0.5.ebuild,
